# sales_taxes

./: .gitignore  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/sales_taxes/: basket.py  item.py
tests/: test_receipt.py
